fix(KAN-95): Correct Hamburger paint issue on Safari

--- a/src/index.css
+++ b/src/index.css
@@ -98,19 +98,19 @@ section {
   }
 
   .ham4 .top {
-    stroke-dasharray: 40 121;
+    stroke-dasharray: 39.9 121;
   }
 
   .ham4 .bottom {
-    stroke-dasharray: 40 121;
+    stroke-dasharray: 39.9 121;
   }
 
   .ham4.active .top {
-    stroke-dashoffset: -68px;
+    stroke-dashoffset: -68;
   }
 
   .ham4.active .bottom {
-    stroke-dashoffset: -68px;
+    stroke-dashoffset: -68;
   }
 
   @keyframes rotateFirstNote {
